--- a/ConstructionSite/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ConstructionSite
 @using ConstructionSite.Models
+@using ConstructionSite.TagHelpers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
