--- a/ConstructionSite/Views/About/Index.cshtml
+++ b/ConstructionSite/Views/About/Index.cshtml
@@ -56,32 +56,32 @@
                                             <ul class="slides">
                                                 <li class="flex-active-slide">
                                                     <a class="zoom" href="assets/img/gallery/1.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/1.jpg" alt="image" />
+                                                    <img src="~/assets/img/gallery/1.jpg" alt="image" />
                                                 </li>
 
                                                 <li class="flex-active-slide">
                                                     <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
+                                                    <img src="~/assets/img/gallery/2.jpg" alt="image" />
                                                 </li>
 
                                                 <li class="flex-active-slide">
                                                     <a class="zoom" href="assets/img/gallery/1.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/1.jpg" alt="image" />
+                                                    <img src="~/assets/img/gallery/1.jpg" alt="image" />
                                                 </li>
 
                                                 <li class="flex-active-slide">
                                                     <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                                    <img src="assets/img/gallery/2.jpg" alt="image" />
+                                                    <img src="~/assets/img/gallery/2.jpg" alt="image" />
                                                 </li>
                                             </ul>
                                         </div>
 
                                         <div id="wprt-carousel" class="flexslider">
                                             <ul class="slides">
-                                                <li><img src="assets/img/gallery/1.jpg" alt="image"></li>
-                                                <li><img src="assets/img/gallery/2.jpg" alt="image"></li>
-                                                <li><img src="assets/img/gallery/1.jpg" alt="image"></li>
-                                                <li><img src="assets/img/gallery/2.jpg" alt="image"></li>
+                                                <li><img src="~/assets/img/gallery/1.jpg" alt="image"></li>
+                                                <li><img src="~/assets/img/gallery/2.jpg" alt="image"></li>
+                                                <li><img src="~/assets/img/gallery/1.jpg" alt="image"></li>
+                                                <li><img src="~/assets/img/gallery/2.jpg" alt="image"></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -119,7 +119,7 @@
                                                     <div class="inner">
                                                         <div class="image">
                                                             <div class="inner">
-                                                                <img src="assets/img/team/1.jpg" alt="image" />
+                                                                <img src="~/assets/img/team/1.jpg" alt="image" />
                                                             </div>
                                                             <ul class="socials clearfix">
                                                                 <li class="twitter"><a target="_blank" href="#"><i class="fa fa-twitter"></i></a></li>
@@ -139,7 +139,7 @@
                                                     <div class="inner">
                                                         <div class="image">
                                                             <div class="inner">
-                                                                <img src="assets/img/team/2.jpg" alt="image" />
+                                                                <img src="~/assets/img/team/2.jpg" alt="image" />
                                                             </div>
                                                             <ul class="socials clearfix">
                                                                 <li class="facebook"><a target="_blank" href="#"><i class="fa fa-facebook"></i></a></li>
@@ -159,7 +159,7 @@
                                                     <div class="inner">
                                                         <div class="image">
                                                             <div class="inner">
-                                                                <img src="assets/img/team/3.jpg" alt="image" />
+                                                                <img src="~/assets/img/team/3.jpg" alt="image" />
                                                             </div>
                                                             <ul class="socials clearfix">
                                                                 <li class="facebook"><a target="_blank" href="#"><i class="fa fa-facebook"></i></a></li>
@@ -179,7 +179,7 @@
                                                     <div class="inner">
                                                         <div class="image">
                                                             <div class="inner">
-                                                                <img src="assets/img/team/4.jpg" alt="image" />
+                                                                <img src="~/assets/img/team/4.jpg" alt="image" />
                                                             </div>
                                                             <ul class="socials clearfix">
                                                                 <li class="facebook"><a target="_blank" href="#"><i class="fa fa-facebook"></i></a></li>
@@ -199,7 +199,7 @@
                                                     <div class="inner">
                                                         <div class="image">
                                                             <div class="inner">
-                                                                <img src="assets/img/team/1.jpg" alt="image" />
+                                                                <img src="~/assets/img/team/1.jpg" alt="image" />
                                                             </div>
                                                             <ul class="socials clearfix">
                                                                 <li class="facebook"><a target="_blank" href="#"><i class="fa fa-facebook"></i></a></li>
@@ -219,7 +219,7 @@
                                                     <div class="inner">
                                                         <div class="image">
                                                             <div class="inner">
-                                                                <img src="assets/img/team/2.jpg" alt="image" />
+                                                                <img src="~/assets/img/team/2.jpg" alt="image" />
                                                             </div>
                                                             <ul class="socials clearfix">
                                                                 <li class="twitter"><a target="_blank" href="#"><i class="fa fa-twitter"></i></a></li>
@@ -239,7 +239,7 @@
                                                     <div class="inner">
                                                         <div class="image">
                                                             <div class="inner">
-                                                                <img src="assets/img/team/3.jpg" alt="image" />
+                                                                <img src="~/assets/img/team/3.jpg" alt="image" />
                                                             </div>
                                                             <ul class="socials clearfix">
                                                                 <li class="facebook"><a target="_blank" href="#"><i class="fa fa-facebook"></i></a></li>
@@ -259,7 +259,7 @@
                                                     <div class="inner">
                                                         <div class="image">
                                                             <div class="inner">
-                                                                <img src="assets/img/team/4.jpg" alt="image" />
+                                                                <img src="~/assets/img/team/4.jpg" alt="image" />
                                                             </div>
                                                             <ul class="socials clearfix">
                                                                 <li class="facebook"><a target="_blank" href="#"><i class="fa fa-facebook"></i></a></li>
@@ -279,7 +279,7 @@
                                                     <div class="inner">
                                                         <div class="image">
                                                             <div class="inner">
-                                                                <img src="assets/img/team/1.jpg" alt="image" />
+                                                                <img src="~/assets/img/team/1.jpg" alt="image" />
                                                             </div>
                                                             <ul class="socials clearfix">
                                                                 <li class="facebook"><a target="_blank" href="#"><i class="fa fa-facebook"></i></a></li>
