_Layout-da Servicesin sub-menularinda asp-action ve asp-controllerleri qeyd etdim

--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -58,11 +58,11 @@
                                     <li class="menu-item menu-item-has-children">
                                         <a href="#team">Services</a>
                                         <ul class="sub-menu">
-                                            <li class="menu-item"><a href="service-Construction.html">Construction</a></li>
-                                            <li class="menu-item"><a href="service-renovation.html">Renovation</a></li>
-                                            <li class="menu-item"><a href="service-consulting.html">Consulting</a></li>
-                                            <li class="menu-item"><a href="service-architecture.html">Architecture</a></li>
-                                            <li class="menu-item"><a href="service-electrical.html">Electrical</a></li>
+                                            <li class="menu-item"><a asp-controller="Services" asp-action="Construction">Construction</a></li>
+                                            <li class="menu-item"><a asp-controller="Services" asp-action="Renovation">Renovation</a></li>
+                                            <li class="menu-item"><a asp-controller="Services" asp-action="Consulting">Consulting</a></li>
+                                            <li class="menu-item"><a asp-controller="Services" asp-action="Architecture">Architecture</a></li>
+                                            <li class="menu-item"><a asp-controller="Services" asp-action="Electrical">Electrical</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="portfolio.html">Portfolio</a></li>
