--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
@@ -279,7 +279,7 @@
                 <!-- sidebar menu start-->
                 <ul class="sidebar-menu" id="nav-accordion">
                     <li>
-                        <a class="active" href="index.html">
+                        <a class="active" asp-area="ConstructionAdmin" asp-controller="Dashboard" asp-action="Index">
                             <i class="icon-dashboard"></i>
                             <span>Dashboard</span>
                         </a>
