--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
@@ -284,6 +284,21 @@
                             <span>Dashboard</span>
                         </a>
                     </li>
+                    <li class="sub-menu">
+                        <a href="javascript:;">
+                            <i class="icon-book"></i>
+                            <span>Pages</span>
+                        </a>
+                        <ul class="sub">
+                            <li><a asp-area="ConstructionAdmin" asp-controller="About" asp-action="Index">About</a></li>
+                            <li><a asp-area="ConstructionAdmin" asp-controller="AboutImage" asp-action="Index">AboutImage</a></li>
+                            <li><a asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Index">Services</a></li>
+                            <li><a asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Index">Portfolio</a></li>
+                            <li><a asp-area="ConstructionAdmin" asp-controller="News" asp-action="Index">News</a></li>
+                            <li><a asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Index">Contact</a></li>
+                            <li><a asp-area="ConstructionAdmin" asp-controller="Image" asp-action="Index">Images</a></li>
+                        </ul>
+                    </li>
 
                     <li class="sub-menu">
                         <a href="javascript:;">
@@ -297,20 +312,7 @@
                         </ul>
                     </li>
 
-                    <li class="sub-menu">
-                        <a href="javascript:;">
-                            <i class="icon-book"></i>
-                            <span>UI Elements</span>
-                        </a>
-                        <ul class="sub">
-                            <li><a href="general.html">General</a></li>
-                            <li><a href="buttons.html">Buttons</a></li>
-                            <li><a href="widget.html">Widget</a></li>
-                            <li><a href="slider.html">Slider</a></li>
-                            <li><a href="nestable.html">Nestable</a></li>
-                            <li><a href="font_awesome.html">Font Awesome</a></li>
-                        </ul>
-                    </li>
+
 
                     <li class="sub-menu">
                         <a href="javascript:;">
