Her bir Conrolleri ve onlarin View-larin daxil etdim ( Artiq ve Eskik yazdiqlarim silinecek )

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
@@ -8,7 +8,7 @@
     <meta name="keyword" content="FlatLab, Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina">
     <link rel="shortcut icon" href="~/ConstructionAdmin/img/favicon.png">
 
-    <title>FlatLab - Flat & Responsive Bootstrap Admin Template</title>
+    <title>Construction - Admin</title>
 
     <!-- Bootstrap core CSS -->
     <link href="~/ConstructionAdmin/css/bootstrap.min.css" rel="stylesheet">
@@ -291,7 +291,6 @@
                         </a>
                         <ul class="sub">
                             <li><a asp-area="ConstructionAdmin" asp-controller="About" asp-action="Index">About</a></li>
-                            <li><a asp-area="ConstructionAdmin" asp-controller="AboutImage" asp-action="Index">AboutImage</a></li>
                             <li><a asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Index">Services</a></li>
                             <li><a asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Index">Portfolio</a></li>
                             <li><a asp-area="ConstructionAdmin" asp-controller="News" asp-action="Index">News</a></li>
