--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
@@ -1,6 +1,5 @@
-﻿nav top-menu
-<!DOCTYPE html>
-<html lang="e
+﻿<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -80,7 +79,7 @@
                         </a>
                     </li>
                     <li class="sub-menu">
-                        <a href="javascript:;">
+                        <a href="javascript:void(0);">
                             <i class="icon-book"></i>
                             <span>Pages</span>
                         </a>
@@ -94,32 +93,7 @@
                         </ul>
                     </li>
 
-                    <li class="sub-menu">
-                        <a href="javascript:;">
-                            <i class="icon-laptop"></i>
-                            <span>Layouts</span>
-                        </a>
-                        <ul class="sub">
-                            <li><a href="boxed_page.html">Boxed Page</a></li>
-                            <li><a href="horizontal_menu.html">Horizontal Menu</a></li>
-                            <li><a href="language_switch_bar.html">Language Switch Bar</a></li>
-                        </ul>
-                    </li>
-
-
-
-                    <li class="sub-menu">
-                        <a href="javascript:;">
-                            <i class="icon-cogs"></i>
-                            <span>Components</span>
-                        </a>
-                        <ul class="sub">
-                            <li><a href="grids.html">Grids</a></li>
-                            <li><a href="calendar.html">Calendar</a></li>
-                            <li><a href="gallery.html">Gallery</a></li>
-                            <li><a href="todo_list.html">Todo List</a></li>
-                        </ul>
-                    </li>
+                
                     <li class="sub-menu">
                         <a href="javascript:;">
                             <i class="icon-tasks"></i>
@@ -135,99 +109,8 @@
                             <li><a href="image_cropping.html">Image Cropping</a></li>
                         </ul>
                     </li>
-                    <li class="sub-menu">
-                        <a href="javascript:;">
-                            <i class="icon-th"></i>
-                            <span>Data Tables</span>
-                        </a>
-                        <ul class="sub">
-                            <li><a href="basic_table.html">Basic Table</a></li>
-                            <li><a href="responsive_table.html">Responsive Table</a></li>
-                            <li><a href="dynamic_table.html">Dynamic Table</a></li>
-                            <li><a href="advanced_table.html">Advanced Table</a></li>
-                            <li><a href="editable_table.html">Editable Table</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="inbox.html">
-                            <i class="icon-envelope"></i>
-                            <span>Mail </span>
-                            <span class="label label-danger pull-right mail-info">2</span>
-                        </a>
-                    </li>
-                    <li class="sub-menu">
-                        <a href="javascript:;">
-                            <i class=" icon-bar-chart"></i>
-                            <span>Charts</span>
-                        </a>
-                        <ul class="sub">
-                            <li><a href="morris.html">Morris</a></li>
-                            <li><a href="chartjs.html">Chartjs</a></li>
-                            <li><a href="flot_chart.html">Flot Charts</a></li>
-                            <li><a href="xchart.html">xChart</a></li>
-                        </ul>
-                    </li>
-                    <li class="sub-menu">
-                        <a href="javascript:;">
-                            <i class="icon-shopping-cart"></i>
-                            <span>Shop</span>
-                        </a>
-                        <ul class="sub">
-                            <li><a href="product_list.html">List View</a></li>
-                            <li><a href="product_details.html">Details View</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="google_maps.html">
-                            <i class="icon-map-marker"></i>
-                            <span>Google Maps </span>
-                        </a>
-                    </li>
-                    <li class="sub-menu">
-                        <a href="javascript:;">
-                            <i class="icon-glass"></i>
-                            <span>Extra</span>
-                        </a>
-                        <ul class="sub">
-                            <li><a href="blank.html">Blank Page</a></li>
-                            <li><a href="lock_screen.html">Lock Screen</a></li>
-                            <li><a href="profile.html">Profile</a></li>
-                            <li><a href="invoice.html">Invoice</a></li>
-                            <li><a href="search_result.html">Search Result</a></li>
-                            <li><a href="404.html">404 Error</a></li>
-                            <li><a href="500.html">500 Error</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="login.html">
-                            <i class="icon-user"></i>
-                            <span>Login Page</span>
-                        </a>
-                    </li>
-
-                    <!--multi level menu start-->
-                    <li class="sub-menu">
-                        <a href="javascript:;">
-                            <i class="icon-sitemap"></i>
-                            <span>Multi level Menu</span>
-                        </a>
-                        <ul class="sub">
-                            <li><a href="javascript:;">Menu Item 1</a></li>
-                            <li class="sub-menu">
-                                <a href="boxed_page.html">Menu Item 2</a>
-                                <ul class="sub">
-                                    <li><a href="javascript:;">Menu Item 2.1</a></li>
-                                    <li class="sub-menu">
-                                        <a href="javascript:;">Menu Item 3</a>
-                                        <ul class="sub">
-                                            <li><a href="javascript:;">Menu Item 3.1</a></li>
-                                            <li><a href="javascript:;">Menu Item 3.2</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
+                    
+                   
                     <!--multi level menu end-->
 
                 </ul>
