About/Index.cshtml qeyd etdim

--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -53,8 +53,8 @@
 
                             <nav id="main-nav" class="main-nav">
                                 <ul class="menu">
-                                    <li class="current-menu-item"><a href="#top">Home</a></li>
-                                    <li><a href="about.html">About</a></li>
+                                    <li class="current-menu-item"><a asp-controller="Home" asp-action="Index">Home</a></li>
+                                    <li><a asp-controller="About" asp-action="Index">About</a></li>
                                     <li class="menu-item menu-item-has-children">
                                         <a href="#team">Services</a>
                                         <ul class="sub-menu">
