Construction ve Renovation bitdi

--- a/ConstructionSite/Views/Services/Construction.cshtml
+++ b/ConstructionSite/Views/Services/Construction.cshtml
@@ -55,7 +55,7 @@
                                 <div class="cbp-item">
                                     <div class="item-wrap">
                                         <a class="zoom" href="assets/img/projects/1.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                        <img src="assets/img/projects/1.jpg" alt="image" />
+                                        <img src="~/assets/img/projects/1.jpg" alt="image" />
                                     </div>
                                 </div>
                                 <!--/.cbp-item -->
@@ -63,7 +63,7 @@
                                 <div class="cbp-item">
                                     <div class="item-wrap">
                                         <a class="zoom" href="assets/img/projects/2.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                        <img src="assets/img/projects/2.jpg" alt="image" />
+                                        <img src="~/assets/img/projects/2.jpg" alt="image" />
                                     </div>
                                 </div>
                                 <!--/.cbp-item -->
@@ -71,7 +71,7 @@
                                 <div class="cbp-item">
                                     <div class="item-wrap">
                                         <a class="zoom" href="assets/img/projects/3.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                        <img src="assets/img/projects/3.jpg" alt="image" />
+                                        <img src="~/assets/img/projects/3.jpg" alt="image" />
                                     </div>
                                 </div>
                                 <!--/.cbp-item -->
@@ -79,7 +79,7 @@
                                 <div class="cbp-item">
                                     <div class="item-wrap">
                                         <a class="zoom" href="assets/img/projects/1.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                        <img src="assets/img/projects/1.jpg" alt="image" />
+                                        <img src="~/assets/img/projects/1.jpg" alt="image" />
                                     </div>
                                 </div>
                                 <!--/.cbp-item -->
@@ -135,33 +135,6 @@
 
         </div>
         <!-- /#site-content -->
-
-        <div id="sidebar">
-            <div class="wprt-spacer" data-desktop="80" data-mobi="40" data-smobi="40"></div>
-            <div id="inner-sidebar" class="inner-content-wrap">
-                <div class="widget widget_nav_menu">
-                    <div class="menu-service-menu-container">
-                        <ul id="menu-service-menu" class="menu">
-                            <li class="menu-item "><a href="service-Construction.html">SERVICE1 </a></li>
-                            <li class="menu-item "><a href="service-renovation.html">SERVICE2</a></li>
-                            <li class="menu-item current_page_item "><a href="service-consulting.html">SERVICE3</a></li>
-                            <li class="menu-item "><a href="service-architecture.html">SERVICE4</a></li>
-                            <li class="menu-item "><a href="service-electrical.html">SERVICE5</a></li>
-                            <li class="menu-item "><a href="service-electrical.html">SERVICE6</a></li>
-                            <li class="menu-item "><a href="service-electrical.html">SERVICE7</a></li>
-                            <li class="menu-item "><a href="service-electrical.html">SERVICE8</a></li>
-                            <li class="menu-item "><a href="service-electrical.html">SERVICE9</a></li>
-                            <li class="menu-item "><a href="service-electrical.html">SERVICE10</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- /.widget_nav_menu -->
-
-            </div>
-            <!-- /#inner-sidebar -->
-
-        </div>
-        <!-- /#sidebar -->
 
     </div>
     <!-- /#content-wrap -->
