--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -21,7 +21,8 @@
     <!-- Favicon and touch icons  -->
     <link rel="shortcut icon" href="~/assets/icon/favicon.png">
     <link rel="apple-touch-icon-precomposed" href="~/assets/icon/apple-touch-icon-158-precomposed.png">
-
+    @*<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>  *@
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="~/https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -42,7 +43,7 @@
                             <div id="site-logo" class="clearfix">
                                 <div id="site-logo-inner">
                                     <a href="home-hero-slideshow.html" title="Construction" rel="home" class="main-logo">
-                                        <img src="~/assets/img/logo-light.png" alt="Construction" data-retina="assets/img/logo-light@2x.png" data-width="204" data-height="30">
+                                        <img src="~/assets/img/logo-light.png" alt="Construction" data-retina="~/assets/img/logo-light@2x.png" data-width="204" data-height="30">
                                     </a>
                                 </div>
                             </div>
@@ -61,8 +62,8 @@
                                             <li class="menu-item">
                                                 <a href="#">Construction</a>
                                                 <ul class="sub-menu2">
-                                                    <li class="menu-item"><a href="service-renovation.html">Service1</a></li>
-                                                    <li class="menu-item"><a href="service-consulting.html">Service2</a></li>
+                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Renovation">Service1</a></li>
+                                                    <li class="menu-item"><a asp-controller="Services" asp-action="Construction">Service2</a></li>
                                                     <li class="menu-item"><a href="service-architecture.html">Service3</a></li>
                                                 </ul>
                                             </li>
@@ -217,7 +218,7 @@
     <script type="text/javascript" src="~/assets/js/countTo.js"></script>
     <script type="text/javascript" src="~/assets/js/fitText.js"></script>
     <script type="text/javascript" src="~/assets/js/flexslider.js"></script>
-    <script type="text/javascript" src="~/assets/js/vegas.js"></script>
+    <script type="text/javascript" src="~/lib/vegas/vegas.min.js"></script>
     <script type="text/javascript" src="~/assets/js/owlCarousel.js"></script>
     <script type="text/javascript" src="~/assets/js/cube.portfolio.js"></script>
     <script type="text/javascript" src="~/assets/js/main.js"></script>
