Side-bar hissesini sildim

--- a/ConstructionSite/Views/Services/Architecture.cshtml
+++ b/ConstructionSite/Views/Services/Architecture.cshtml
@@ -137,7 +137,7 @@
         <!-- /#site-content -->
 
         <div class="wprt-spacer" data-desktop="80" data-mobi="40" data-smobi="40"></div>
-        <div id="inner-sidebar" class="inner-content-wrap">
+        @*<div id="inner-sidebar" class="inner-content-wrap">
             <div class="widget widget_nav_menu">
                 <div class="menu-service-menu-container">
                     <ul id="menu-service-menu" class="menu">
@@ -153,7 +153,7 @@
                         <li class="menu-item "><a href="service-electrical.html">SERVICE10</a></li>
                     </ul>
                 </div>
-            </div>
+            </div>*@
             <!-- /.widget_nav_menu -->
 
         </div>
