--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -20,9 +20,7 @@
 
     <!-- Favicon and touch icons  -->
     <link rel="shortcut icon" href="~/assets/icon/favicon.png">
-    <link rel="apple-touch-icon-precomposed" href="~/assets/icon/apple-touch-icon-158-precomposed.png">
-    @*<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>  *@
+    <link rel="apple-touch-icon-precomposed" href="~/assets/icon/apple-touch-icon-158-precomposed.png" />
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="~/https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -212,7 +210,7 @@
 
     <!-- Javascript -->
     <script type="text/javascript" src="~/assets/js/jquery.min.js"></script>
-    <script type="text/javascript" src="~/assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="~/lib/bootstrap-v4-rtl/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="~/assets/js/animsition.js"></script>
     <script type="text/javascript" src="~/assets/js/plugins.js"></script>
     <script type="text/javascript" src="~/assets/js/countTo.js"></script>
