--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                             <div id="site-logo" class="clearfix">
                                 <div id="site-logo-inner">
                                     <a href="home-hero-slideshow.html" title="Construction" rel="home" class="main-logo">
-                                        <img src="~/assets/img/logo-light.png" alt="Construction" data-retina="~/assets/img/logo-light@2x.png" data-width="204" data-height="30">
+                                        <img src="assets/img/logo-light.png" alt="Construction" data-retina="assets/img/logo-light@2x.png" data-width="204" data-height="30">
                                     </a>
                                 </div>
                             </div>
@@ -152,7 +152,7 @@
                         <div class="col-md-8">
                             <div class="widget widget_about margin-bottom-25">
                                 <div class="margin-bottom-35">
-                                    <img src="~/assets/img/logo-light@2x.png" width="204" height="30" alt="image" />
+                                    <img src="assets/img/logo-light@2x.png" width="204" height="30" alt="image" />
                                 </div>
                                 <p>Nullam vel enim risus. Integer rhoncus hendrerit sem egestas porttitor.</p>
                                 <section class="widget widget_information">
