Terms ANd Conditions-un front-un elave etdim

--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -168,8 +168,8 @@
                             <div class="widget widget_links">
                                 <h2 class="widget-title">Useful links</h2>
                                 <ul class="links col2">
-                                    <li><a href="#">Home</a></li>
-                                    <li><a href="portfolio.html">Portfolio</a></li>
+                                    <li><a asp-controller="Home" asp-action="Index">Home</a></li>
+                                    <li><a asp-controller="Portfolio" asp-action="Index">Portfolio</a></li>
                                     <li class="last"><a href="terms.html">Term of Use</a></li>
                                     <li class="last"><a href="about.html">About Us</a></li>
                                     <li><a href="blog.html">News</a></li>
