Services/Index.cshtml-i daxil etdim

--- a/ConstructionSite/Views/Home/Index.cshtml
+++ b/ConstructionSite/Views/Home/Index.cshtml
@@ -159,10 +159,10 @@
                                     </div>
                                     <div class="wprt-spacer" data-desktop="36" data-mobi="30" data-smobi="30"></div>
                                     <p class="wprt-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sit amet iaculis elit. Nam semper ut arcu non placerat. Praesent nibh massa varius.</p>
-                                    <div class="link">  <a href="about.html" class="wprt-button small rounded-3px">READ MORE</a></div>
+                                    <div class="link"><a asp-controller="About" asp-action="Index" class="wprt-button small rounded-3px">READ MORE</a></div>
                                     <div class="wprt-spacer" data-desktop="40" data-mobi="30" data-smobi="30"></div>
                                     <div class="text-center">
-                                        <img src="assets/img/ab.jpg" alt="image" />
+                                        <img src="~/assets/img/ab.jpg" alt="image" />
                                     </div>
                                 </div>
                                 <!-- /.col-md-12 -->
@@ -191,7 +191,7 @@
                                         semper ut arcu non placerat. Praesent nibh
                                         massa varius.
                                     </p> <div class="link">
-                                        <a href="all-services.html" class="wprt-button small rounded-3px">
+                                        <a asp-controller="Services" asp-action="Index" class="wprt-button small rounded-3px">
                                             SEE
                                             ALL
                                         </a>
