Portfolio-daki butun chatismazliqlari aradan qaldirdim

--- a/ConstructionSite/Views/Portfolio/Detail.cshtml
+++ b/ConstructionSite/Views/Portfolio/Detail.cshtml
@@ -28,23 +28,23 @@
                                         <div id="wprt-slider" class="flexslider">
                                             <ul class="slides">
                                                 <li class="flex-active-slide">
-                                                    <a class="zoom" href="~/assets/img/gallery/1.jpg"><i class="fa fa-arrows-alt"></i></a>
+                                                    <a class="zoom" href="assets/img/gallery/1.jpg"><i class="fa fa-arrows-alt"></i></a>
                                                     <img src="~/assets/img/gallery/1.jpg" alt="image" />
                                                 </li>
                                                 <li class="flex-active-slide">
-                                                    <a class="zoom" href="~/assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
+                                                    <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
                                                     <img src="~/assets/img/gallery/2.jpg" alt="image" />
                                                 </li>
                                                 <li class="flex-active-slide">
-                                                    <a class="zoom" href="~/assets/img/gallery/1.jpg"><i class="fa fa-arrows-alt"></i></a>
+                                                    <a class="zoom" href="assets/img/gallery/1.jpg"><i class="fa fa-arrows-alt"></i></a>
                                                     <img src="~/assets/img/gallery/1.jpg" alt="image" />
                                                 </li>
                                                 <li class="flex-active-slide">
-                                                    <a class="zoom" href="~/assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
+                                                    <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
                                                     <img src="~/assets/img/gallery/2.jpg" alt="image" />
                                                 </li>
                                                 <li class="flex-active-slide">
-                                                    <a class="zoom" href="~/assets/img/gallery/1.jpg"><i class="fa fa-arrows-alt"></i></a>
+                                                    <a class="zoom" href="assets/img/gallery/1.jpg"><i class="fa fa-arrows-alt"></i></a>
                                                     <img src="~/assets/img/gallery/1.jpg" alt="image" />
                                                 </li>
                                             </ul>
