--- a/ConstructionSite/Views/Portfolio/Index.cshtml
+++ b/ConstructionSite/Views/Portfolio/Index.cshtml
@@ -59,7 +59,7 @@
                                 </figcaption>
                             </figure>
                         </div>
-                        <a class="project-zoom cbp-lightbox" href="~assets/img/projects/1-full.jpg" data-title="LUXURY BUILDINGS">
+                        <a class="project-zoom cbp-lightbox" href="assets/img/projects/1-full.jpg" data-title="LUXURY BUILDINGS">
                             <i class="fa fa-arrows-alt"></i>
                         </a>
                     </div>
@@ -81,7 +81,7 @@
                                 </figcaption>
                             </figure>
                         </div>
-                        <a class="project-zoom cbp-lightbox" href="~assets/img/projects/2-full.jpg" data-title="LUXURY BUILDINGS">
+                        <a class="project-zoom cbp-lightbox" href="assets/img/projects/2-full.jpg" data-title="LUXURY BUILDINGS">
                             <i class="fa fa-arrows-alt"></i>
                         </a>
                     </div>
@@ -103,7 +103,7 @@
                                 </figcaption>
                             </figure>
                         </div>
-                        <a class="project-zoom cbp-lightbox" href="~assets/img/projects/3-full.jpg" data-title="LUXURY BUILDINGS">
+                        <a class="project-zoom cbp-lightbox" href="assets/img/projects/3-full.jpg" data-title="LUXURY BUILDINGS">
                             <i class="fa fa-arrows-alt"></i>
                         </a>
                     </div>
@@ -125,7 +125,7 @@
                                 </figcaption>
                             </figure>
                         </div>
-                        <a class="project-zoom cbp-lightbox" href="~assets/img/projects/4-full.jpg" data-title="LUXURY BUILDINGS">
+                        <a class="project-zoom cbp-lightbox" href="assets/img/projects/4-full.jpg" data-title="LUXURY BUILDINGS">
                             <i class="fa fa-arrows-alt"></i>
                         </a>
                     </div>
@@ -147,7 +147,7 @@
                                 </figcaption>
                             </figure>
                         </div>
-                        <a class="project-zoom cbp-lightbox" href="~assets/img/projects/5-full.jpg" data-title="LUXURY BUILDINGS">
+                        <a class="project-zoom cbp-lightbox" href="assets/img/projects/5-full.jpg" data-title="LUXURY BUILDINGS">
                             <i class="fa fa-arrows-alt"></i>
                         </a>
                     </div>
@@ -169,7 +169,7 @@
                                 </figcaption>
                             </figure>
                         </div>
-                        <a class="project-zoom cbp-lightbox" href="~assets/img/projects/6-full.jpg" data-title="LUXURY BUILDINGS">
+                        <a class="project-zoom cbp-lightbox" href="assets/img/projects/6-full.jpg" data-title="LUXURY BUILDINGS">
                             <i class="fa fa-arrows-alt"></i>
                         </a>
                     </div>
@@ -191,7 +191,7 @@
                                 </figcaption>
                             </figure>
                         </div>
-                        <a class="project-zoom cbp-lightbox" href="~assets/img/projects/7-full.jpg" data-title="LUXURY BUILDINGS">
+                        <a class="project-zoom cbp-lightbox" href="assets/img/projects/7-full.jpg" data-title="LUXURY BUILDINGS">
                             <i class="fa fa-arrows-alt"></i>
                         </a>
                     </div>
@@ -213,7 +213,7 @@
                                 </figcaption>
                             </figure>
                         </div>
-                        <a class="project-zoom cbp-lightbox" href="~assets/img/projects/8-full.jpg" data-title="LUXURY BUILDINGS">
+                        <a class="project-zoom cbp-lightbox" href="assets/img/projects/8-full.jpg" data-title="LUXURY BUILDINGS">
                             <i class="fa fa-arrows-alt"></i>
                         </a>
                     </div>
