AccountController-de Index-i qeyd etdim, Account/Index-i elave etdim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
@@ -1,1 +1,3 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using ConstructionSite.Entity.Models
+@using ConstructionSite.Areas.ConstructionAdmin.Models.DTO
