--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
@@ -55,10 +55,10 @@
                         </a>
                         <ul class="dropdown-menu extended logout">
                             @* <div class="log-arrow-up"></div>*@
-                            <li><a href="#"><i class=" icon-suitcase"></i>Profile</a></li>
+                            <li><a asp-controller="Account" asp-action="Index"><i class=" icon-suitcase"></i>Profile</a></li>
                             <li><a href="#"><i class="icon-cog"></i> Settings</a></li>
                             <li><a href="#"><i class="icon-bell-alt"></i> Notification</a></li>
-                            <li><a href="login.html"><i class="icon-key"></i> Log Out</a></li>
+                            <li><a asp-controller="Account" asp-action="Login"><i class="icon-key"></i> Log Out</a></li>
                         </ul>
                     </li>
                     <!-- user login dropdown end -->
