Account/Create-nin templateni qaydaya saliream

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using ConstructionSite.Entity.Models
 @using ConstructionSite.Areas.ConstructionAdmin.Models.DTO
 @using ConstructionSite.Entity.Identity
+@using ConstructionSite.Areas.ConstructionAdmin.Models.ViewModels
