--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Create.cshtml
@@ -19,54 +19,37 @@
                             <form class="cmxform form-horizontal tasi-form" asp-controller="Account" asp-action="Create" id="signupForm" method="get">
                                 <div asp-validation-summary="ModelOnly" class="form-group ">
                                     @Html.AntiForgeryToken()
-                                    <label for="firstname" class="control-label col-lg-2">@Html.DisplayNameFor(model=>model.Name)</label>
+                                    <label for="firstname" class="control-label col-lg-2">@Html.DisplayNameFor(model => model.Name)</label>
                                     <div class="col-lg-10">
                                         <input type="text" asp-for="Name" class=" form-control" placeholder="Enter a name" />
                                         <span asp-validation-for="Name" class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="form-group ">
-                                    <label for="username" class="control-label col-lg-2">Username</label>
+                                    <label for="username" class="control-label col-lg-2">@Html.DisplayNameFor(m => m.Username)</label>
                                     <div class="col-lg-10">
                                         <input type="text" asp-for="Name" class="form-control" placeholder="Enter a username" />
                                         <span asp-validation-for="Username" class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="form-group ">
-                                    <label for="password" class="control-label col-lg-2">Password</label>
+                                    <label for="email" class="control-label col-lg-2">@Html.DisplayNameFor(m => m.Email)</label>
                                     <div class="col-lg-10">
-                                        <input class="form-control " id="password" name="password" type="password" />
+                                        <input type="text" asp-for="Email" class="form-control" placeholder="Enter a email" />
+                                        <span asp-validation-for="Email" class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="form-group ">
-                                    <label for="confirm_password" class="control-label col-lg-2">Confirm Password</label>
+                                    <label for="password" class="control-label col-lg-2">@Html.DisplayNameFor(m => m.Password)</label>
                                     <div class="col-lg-10">
-                                        <input class="form-control " id="confirm_password" name="confirm_password" type="password" />
+                                        <input type="password" asp-for="Password" class="form-control" placeholder="Enter a password" />
+                                        <span asp-validation-for="Password" class="text-danger"></span>
                                     </div>
                                 </div>
-                                <div class="form-group ">
-                                    <label for="email" class="control-label col-lg-2">Email</label>
-                                    <div class="col-lg-10">
-                                        <input class="form-control " id="email" name="email" type="email" />
-                                    </div>
-                                </div>
-                                <div class="form-group ">
-                                    <label for="agree" class="control-label col-lg-2 col-sm-3">Agree to Our Policy</label>
-                                    <div class="col-lg-10 col-sm-9">
-                                        <input type="checkbox" style="width: 20px" class="checkbox form-control" id="agree" name="agree" />
-                                    </div>
-                                </div>
-                                <div class="form-group ">
-                                    <label for="newsletter" class="control-label col-lg-2 col-sm-3">Receive the Newsletter</label>
-                                    <div class="col-lg-10 col-sm-9">
-                                        <input type="checkbox" style="width: 20px" class="checkbox form-control" id="newsletter" name="newsletter" />
-                                    </div>
-                                </div>
-
                                 <div class="form-group">
                                     <div class="col-lg-offset-2 col-lg-10">
                                         <button class="btn btn-danger" type="submit">Save</button>
-                                        <button class="btn btn-default" type="button">Cancel</button>
+                                        <button asp-action="index" asp-controller="account" class="btn btn-default" type="button">Cancel</button>
                                     </div>
                                 </div>
                             </form>
